v4l2videodec: handle bt2020_10
V4l2object has trick to handle bt2020 as v4l2 don't have those defines. I have one stream which is bt2020_10 which is parsed from h265parse. But v4l2videodec can't handle it. it will changed to bt2020_12 as below code. I think we can map gst bt2020_10/12 to v4l2 bt709, but need consider input caps transfer when map v4l2 bt709 back to gst bt2020_10/12. Is it reasonable?
switch (transfer) { case V4L2_XFER_FUNC_709: if (colorspace == V4L2_COLORSPACE_BT2020 && fmt->fmt.pix.height >= 2160) cinfo->transfer = GST_VIDEO_TRANSFER_BT2020_12; else cinfo->transfer = GST_VIDEO_TRANSFER_BT709; break;